themes/Synthwave84/css/source.css
/* ... */
#app-mount .modeSelected-3DmyhH .content-1gYQeQ,
#app-mount .modeSelected-3DmyhH:hover .content-1gYQeQ,
#app-mount .wrapper-NhbLHG:hover .content-1gYQeQ {
  background-color: var(--backgroundColor01);
}
#app-mount .content-1gYQeQ {
  position: relative;
  overflow: hidden;
}
#app-mount .content-1gYQeQ::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 2px;
  width: 100%;
  background-color: var(--gradientColor01);
  background-image: linear-gradient(
    -45deg,
    var(--gradientColor01),
    var(--gradientColor02)
  ) !important;
  -webkit-transition: transform 0.2s ease;
  -ms-transition: transform 0.2s ease;
  -o-transition: transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}
#app-mount .modeSelected-3DmyhH .link-39sEB3,
#app-mount .modeSelected-3DmyhH:hover .link-39sEB3,
#app-mount .wrapper-NhbLHG:hover .link-39sEB3 {
  background-color: var(--backgroundColor01);
}
#app-mount .link-39sEB3 {
  position: relative;
  overflow: hidden;
}
#app-mount .link-39sEB3::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 2px;
  width: 100%;
  background-color: var(--gradientColor01);
  background-image: linear-gradient(
    -45deg,
    var(--gradientColor01),
    var(--gradientColor02)
  ) !important;
  -webkit-transition: transform 0.2s ease;
  -ms-transition: transform 0.2s ease;
  -o-transition: transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
}
#app-mount .modeSelected-3DmyhH .content-1gYQeQ::after,
#app-mount .wrapper-NhbLHG:hover .content-1gYQeQ::after {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  -moz-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}
#app-mount .wrapper-2fEmwW {
  color: rgba(255, 255, 255, 0.5);
}
#app-mount .wrapper-2fEmwW .users-2JoyGL {
  background-color: var(--backgroundColor01);
}
#app-mount .wrapper-2fEmwW .total-1c5KCN {
  background-color: var(--backgroundColor01) !important;
}
#app-mount .wrapper-2fEmwW .total-1c5KCN:after {
  border-right-color: var(--backgroundColor01) !important;
}
#app-mount .unread-36eUEm {
  height: 8px;
  width: 8px;
  border-radius: 4px;
  left: 4px;
  -webkit-transition: box-shadow 0.2s ease;
  -ms-transition: box-shadow 0.2s ease;
  -o-transition: box-shadow 0.2s ease;
  -moz-transition: box-shadow 0.2s ease;
  transition: box-shadow 0.2s ease;
  background-color: #ffffff00;
  z-index: 10;
  position: absolute;
}
#app-mount .unread-36eUEm:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--mainColor);
  border-radius: 100%;
  z-index: -2;
  animation: pulse 2s infinite;
  will-change: transform;
}
.avatar-2e8lTP {
  position: absolute;
  left: 16px;
  margin-top: calc(4px - 0.125rem);
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-flex: 0;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  pointer-events: none;
  z-index: 1;
  box-shadow: rgb(210 109 208 / 30%) 0px 1px 2px 2px,
    rgb(210 109 208 / 15%) 0px 2px 6px 9px !important;
  background-clip: content-box !important;
}
#app-mount .layout-1qmrhw::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 2px;
  width: 100%;
  background-color: var(--gradientColor01);
  background-image: linear-gradient(
    -45deg,
    var(--gradientColor01),
    var(--gradientColor02)
  ) !important;
  -webkit-transition: transform 0.2s ease;
  -ms-transition: transform 0.2s ease;
  -o-transition: transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}
#app-mount .wrapper-1VLyxH {
  box-shadow: rgb(210 109 208 / 30%) 0px 0px 2px 3px,
    rgb(210 109 208 / 15%) 0px 0px 8px -1px !important;
  background-clip: content-box !important;
}
#app-mount .unread-36eUEm:hover:after {
  animation: none;
}
.activityEmoji-SDBJp8 {
  margin-right: 4px;
  width: 14px;
  height: 14px;
  opacity: 100 !important;
  z-index: 9999 !important;
}
.activityEmoji-24oKjc {
  margin-right: 4px;
  width: 14px;
  height: 14px;
  opacity: 100 !important;
  z-index: 9999 !important;
}
.activity-icon {
  width: 16px;
  height: 16px;
  margin-left: 2px;
  -webkit-box-flex: 0;
  flex: 0 0 auto;
  z-index: 9999 !important;
  opacity: 100% !important;
  color: #fff !important;
  background: var(--backgroundColor02) !important;
  background-image: var(--backgroundColor02) !important;
}
.activityText-1rR-8O {
  -webkit-box-flex: 1 !important;
  -ms-flex: 0 1 auto !important;
  flex: 0 1 auto !important;
  white-space: nowrap !important;
  text-overflow: ellipsis !important;
  overflow: hidden !important;
  overflow-x: -webit-marquee !important;
  -moz-transform: translateX(100%) !important;
  -webkit-transform: translateX(100%) !important;
  transform: translateX(100%) !important;
  -moz-animation: marquee 20s linear infinite !important;
  -webkit-animation: marquee 20s linear infinite !important;
  overflow-x: marquee-line !important;
  animation: marquee 20s linear infinite !important;
  color: var !important;
  width: 100% !important;
}
.activityText-1rR-80:hover {
  animation-play-state: paused !important;
}
/* ... */

